--- a/index.html
+++ b/index.html
@@ -35,16 +35,19 @@
       <section class="card" id="git-section">
         <h2>Git</h2>
         <ul>
-          <li>git status: checks what branch we are currently on</li>
-          <li>git checkout -b branch-name: creates a new branch and switches to it</li>
-          <li>git checkout main: move to main branch</li>
-          <li>git add -A: modifies in the current working directory</li>
+          <li>git status: checks what branch we are currently on.</li>
+          <li>git checkout -b branch-name: creates a new branch and switches to it.</li>
+          <li>git checkout main: move to main branch.</li>
+          <li>git add -A: modifies in the current working directory.</li>
         </ul>
       </section>
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your JavaScript notes here</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>JavaScript is a tool that takes a static HTML/CSS webpage and makes it interactive.</li>
+          <li>A function's name is followed by parentheses (). Later on, we will define parameters that can be placed inside the parentheses.</li>
         </ul>
       </section>
     </main>
